--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,7 @@
-#Wed Mar 05 00:30:59 CST 2025
+#Tue Jul 29 00:34:03 CST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-#distributionUrl=https\://services.gradle.org/distributions/gradle-8.13-bin.zip
-distributionUrl=https://mirrors.cloud.tencent.com/gradle/gradle-8.14-all.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-9.0.0-all.zip
+distributionUrl=https://mirrors.cloud.tencent.com/gradle/gradle-9.0.0-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
