--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.audiorecorder">
+
+    <!-- Attribution tag declaration for Android 12+ -->
+    <attribution android:tag="default" android:label="@string/app_name" />
 
     <!-- 允许录制音频 - 此权限为应用核心功能必需 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
